reportbug (3.41) UNRELEASED; urgency=low

  [ Chris Lawrence ]
  * debian/control
    - Added self to Uploaders
    - Set Maintainer to new list on alioth.

 -- Chris Lawrence <lawrencc@debian.org>  Wed, 28 May 2008 18:19:04 -0500

reportbug (3.40) unstable; urgency=low

  [ Sandro Tosi ]
  * debian/control
    - added Giridhar and me to Uploaders
    - added "DM-Upload-Allowed: yes"
    - bump Standards-Version to 3.7.3
    - moved python-central to Build-Depends-Indep and version bump to >= 0.5.14
    - updated Conflicts with python-central version lower than 0.5.13 (Closes:
      #418166)
    - added Vcs-{Svn,Browser} fields
    - added Homepage field
  * debian/copyright
    - clear separation of author, copyright and license notices
  * debian/menu
    - section updated to "Applications/System/Administration"
  * debian/rules
    - removed export DH_COMPAT
    - now using binary-indep since it's and arch: all package
    - doesn't remove 'test' dir anymore, since now it's used for unittests
      files
  * debian/compat
    - added with value = 5
  * reportbug.conf.5, po4a/add_fr/{reportbug.add,querybts.add}
    - escaped minus sign to be an hyphen
  * reportbug.ja.1
    - fixed some formatting errors
  * debianbts.py
    - added 'nm.debian.org' pseudo-package, Giridhar's patch (Closes: #478414)
    - removed Gnome BTS from bugs forward; Giridhar's patch (Closes: #439351)
    - removed [cruft-report] option from ftp.debian.org RM template;
      Giridhar's patch (Closes: #474970)
    - reintroduced 'kernel' pseudo-package, but just to fall back to
      'linux-image' (Closes: #423197)
    - added 'wiki.debian.org', 'release.debian.org' and 'spam' pseudo-packages
  * reportbug.py
    - uses dpkg when dlocate can't find the package's file (Closes: #429824,
      #422369, #322983, #408834)
  * reportbug.el
    - applied patch to let Gnus work; thanks to Håkon Stordahl for it (Closes:
      #227153)
  * reportbug